Quorum3/Library/Tests/TypeChecker/Pass/ImpAssignIntegerIntObj.quorum
Integer int
int:SetValue(5)
integer i = int
output i