Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignBoolObjIntObj.quorum
Integer i
i:setValue(5)
Boolean b = i